--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -435,7 +435,7 @@ function GetOCRTxt() {
 			      //content = content.replace(new RegExp(parsedUrlParams['query'],'g'), '<mark>'+parsedUrlParams['query']+'</mark>');
 
 			      UpdateOCRTxt(content);
-				  loadExcept();
+				  ShowOCR(undefined);
 			      //doc.classList.add("ocrstyle");
 
 			      //doc2.appendChild(doc);
