--- a/web/Search.html
+++ b/web/Search.html
@@ -224,6 +224,10 @@ padding: .4em .4em .4em 2em;
 	transform: scale(1.01);
 }
 
+#realHeader {
+	list-style-type: none;
+}
+
 #realHeader a:hover{
 	background: #9a9a9a;
 	transform: scale(1.08);
