last bad commit message

--- a/web/Search.html
+++ b/web/Search.html
@@ -835,7 +835,7 @@ function changeColor(obj)
 		}
 	}
 	obj.style.background = "#b1c4e2";
-	window.open(obj.dataset.specialhref);
+	window.location = obj.dataset.specialhref;
 	return true;
 }
 
