--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -661,16 +661,12 @@ function init() {
 			pageVal[searchResults.pages[i].page-1]=pageVal[searchResults.pages[i].page-1].replace(new RegExp('(\\b'+searchResults.pages[i].word.replace(/[-[\]{}()*+?.,\\^$|#\s]/g, '\\$&')+'\\b)','gi'),'<mark>$1</mark>');
 		  }
 		}
-<<<<<<< HEAD
-        }
-		GetOCRTxt();
-=======
+	GetOCRTxt();
 
     	document.getElementById("ShowOCRButton").disabled = false;
-		document.getElementById("ShowOCRButton").classList.add("butX");
+	document.getElementById("ShowOCRButton").classList.add("butX");
 	});
->>>>>>> 46a24a16ef3db397c3df512e27b6adf466725553
-	}, function() {
+							      }}, function() {
 		// print some error message here
 //  for(let i = 0; i < HighlightList.length; i++)
   //    x = x.replace(new RegExp('(\\b'+HighlightList[i]+'\\b)','gi'),'<mark>$1</mark>');
