--- a/web/UploadBook.html
+++ b/web/UploadBook.html
@@ -687,7 +687,7 @@ window.addEventListener("load",User.initialise,false);
 	<body>
 		<!-- The navigation bar config -->
 		<div class="topnav">
-			<a href="/">Home</a>
+			<a href="/home">Home</a>
 			<a href="/search">Search</a>
 			<a class="classifiedContent" href="/administration" data-acc=4>Administration</a>
 			<a class="classifiedContent active" href="/uploadbook" data-acc=2>Upload Books</a>
