--- a/web/Administration.html
+++ b/web/Administration.html
@@ -308,7 +308,7 @@ window.addEventListener("load",User.initialise,false);
 <body>
 <!-- The navigation bar config -->
  <div class="topnav">
-  <a href="/">Home</a>
+  <a href="/home">Home</a>
   <a href="/search">Search</a>
   <a class="classifiedContent active" href="/administration" data-acc=4>Administration</a>
   <a class="classifiedContent" href="/uploadbook" data-acc=2>Upload Books</a>
