--- a/web/ManageBooks.html
+++ b/web/ManageBooks.html
@@ -806,7 +806,7 @@ h1 {
 <body>
 <!-- The navigation bar config -->
  <div class="topnav">
-  <a href="/">Home</a>
+  <a href="/home">Home</a>
   <a href="/search">Search</a>
   <a class="classifiedContent" href="/administration" data-acc=4>Administration</a>
   <a class="classifiedContent" href="/uploadbook" data-acc=2>Upload Books</a>
