Reverted the search on type update because the feature is too buggy at the moment

--- a/web/Search.html
+++ b/web/Search.html
@@ -378,9 +378,9 @@ class User {
 				document.getElementById("srchButton").click();
 			}
 		});
-		inp.addEventListener("input",function(event){
-			document.getElementById("srchButton").click();
-		});
+		//inp.addEventListener("input",function(event){
+		//	document.getElementById("srchButton").click();
+		//});
 
 		if(ServerDataObj==undefined)
 			alert("Site internal error");
